# photohoard

./: .bzrignore  .gitignore  .readthedocs.yaml  BUGS  CHANGELOG  CMakeLists.txt  DebPack.CMakeLists.txt  INSTALL  Makefile  README.md  UnixInstall.CMakeLists.txt  crash-while-rescanning-160820
designdocs/: .~lock.import-actions.ods#  Makefile  grandscheme.aux  grandscheme.ptx  import-actions.ods  pretex
devnotes.nb/: book.json  index.json  style.json  toc.json
devnotes.nb/pages/: 0001-5f0eba0b.json  0004-fcd61a23.json  0009-bea3cf60.json  0011-ec9ee737.json  0012-073ef04c.json  0013-578c9655.json  0014-83819587.json  0015-cc2dbf8a.json  0016-253fa3de.json  0017-7955b5de.json  0019-7a4a2fa1.json  0019-d773dd49.json  0020-d773dd49.json  0021-60ed6451.json  0024-0bc5d878.json  0025-16f7c1e7.json  0026-ebad2415.json  0027-f6d5de58.json  0028-6c053074.json  0029-8996173b.json  0031-fd4d8928.json  0033-bf2052ff.json  0034-2ab1cf1e.json  0035-85c0da23.json  0037-6294f02e.json  0037-8147750f.json  0038-6944a13a.json  0038-db579a92.json  0039-ad181811.json  0040-8147750f.json  0041-6944a13a.json  0042-03ed8336.json  0045-a82324d6.json  0046-b6ee4b26.json  0049-1497cead.json  0050-060387cc.json  0052-c21c3894.json  0053-30ad65b2.json  0054-b9d75a1a.json  0055-0196f155.json  (+15 more)
doc/: Makefile  photohoard.1.txt  userguide.tex
docs/source/: browsing.rst  editing.rst  exporting.rst  fontinfo.txt  index.rst  install.rst  library.rst  license.rst  organization.rst  technical.rst  why.rst
res/: MacDMG.CMakeLists.txt  README-ICON  UnixInstall.CMakeLists.txt  canonlenses.txt  canonlenses2c.pl  createtagsfromforeign.pl  currentmonitorprofile  dropcol.pl  efmountlens.h  examples.sql  fmountlens.h  foreigntaglist.txt  nikonlenses.db  photohoard.desktop  setupcache.sql  setupdb.sql  setupnikonlenses.pl  setupsession.sql  sliders.txt  spliticons.pl  studydb.pl  style.css  updatesources.sh
res/doc/: photohoard.1
src/: .qmake.stash  AC_Worker.cpp  AC_Worker.h  ActionBar.cpp  ActionBar.h  Adjustment.cpp  Adjustment.h  Application.cpp  Application.h  AutoCache.cpp  AutoCache.h  BasicCache.cpp  BasicCache.h  BasicThread.cpp  BasicThread.h  CMSProfile.cpp  CMSProfile.h  CMSToneCurve.cpp  CMSTransform.cpp  CMSTransform.h  CMakeLists.txt  CacheFiller.cpp  CacheFiller.h  ColorLabelBar.cpp  ColorLabelBar.h  Database.cpp  Database.h  Datestrip.cpp  Datestrip.h  ExceptionReporter.cpp  ExceptionReporter.h  Exif.cpp  Exif.h  ExifReport.cpp  ExifReport.h  ExportDialog.cpp  ExportDialog.h  ExportDialog.ui  ExportSettings.cpp  ExportSettings.h  (+61 more)
src/adj/: Adjuster.cpp  Adjuster.h  AdjusterEqualize.cpp  AdjusterEqualize.h  AdjusterGeometry.cpp  AdjusterGeometry.h  AdjusterIPT.cpp  AdjusterIPT.h  AdjusterIPTAlt.cpp  AdjusterStage.cpp  AdjusterStage.h  AdjusterTile.cpp  AdjusterTile.h  AdjusterUMask.cpp  AdjusterUMask.h  AdjusterXYZ.cpp  AdjusterXYZ.h  AdjustmentDefs.h  Adjustments.cpp  Adjustments.h  AllAdjuster.cpp  AllAdjuster.h  AllAdjustments.cpp  AllAdjustments.h  CMakeLists.txt  CS_IPT.cpp  CS_IPT.h  CS_Lab.cpp  CS_Lab.h  Clarity.cpp  Clarity.h  ColorSpaces.h  CropCalc.cpp  CropCalc.h  CropEnums.h  Geometry.cpp  Geometry.h  Histogram.cpp  Histogram.h  Image16.cpp  (+19 more)
src/cms/: CMS.h  CMSProfile.cpp  CMSProfile.h  CMSToneCurve.h  CMSTransform.cpp  CMSTransform.h  CMakeLists.txt  ThreadedTransform.cpp  ThreadedTransform.h  cms.pri
src/corelib/: BasicThread.cpp  BasicThread.h  CMakeLists.txt  CS_IPT.h  CS_sRGB.cpp  CS_sRGB.h  ColorSpaces.cpp  ColorSpaces.h  Database.cpp  Database.h  DropFrame.cpp  DropFrame.h  Exif.cpp  Exif.h  Here.h  Image16.cpp  Image16.h  Image16Base.h  Image16Data.h  ImgAvg.h  InstaSlot.cpp  InstaSlot.h  NiceProcess.cpp  NiceProcess.h  OverGroupBox.cpp  OverGroupBox.h  PDebug.cpp  PDebug.h  PPM16.cpp  PSize.cpp  PSize.h  PerspectiveTransform.cpp  PerspectiveTransform.h  PhotoOps.cpp  PhotoOps.h  SourceInfo.cpp  SourceInfo.h  Spline.cpp  Spline.h  SqlFile.cpp  (+4 more)
src/db/: AC_ImageHolder.cpp  AC_ImageHolder.h  AC_Worker.cpp  AC_Worker.h  AutoCache.cpp  AutoCache.h  BasicCache.cpp  BasicCache.h  BasicThread.cpp  CMakeLists.txt  CanonLenses.cpp  CanonLenses.h  Collector.cpp  Collector.h  CopyIn.cpp  CopyIn.h  Database.cpp  Database.h  DragOut.cpp  DragOut.h  ExceptionReporter.cpp  Exif.cpp  Exif.h  ExifReport.cpp  ExportSettings.cpp  ExportSettings.h  Exporter.cpp  Exporter.h  Extensions.cpp  Extensions.h  FileLocations.cpp  FileLocations.h  Filter.cpp  Filter.h  IF_Bank.cpp  IF_Bank.h  IF_Worker.cpp  IF_Worker.h  ImageFinder.cpp  ImageFinder.h  (+50 more)
src/dlg/: AddRootDialog.cpp  AddRootDialog.h  AddRootDialog.ui  CMakeLists.txt  ColorManagementDialog.ui  CreateDatabaseDialog.cpp  CreateDatabaseDialog.h  CreateDatabaseDialog.ui  CropDialog.ui  DBInfoDialog.cpp  DBInfoDialog.h  DBInfoDialog.ui  DatabaseDialog.cpp  DatabaseDialog.h  DatabaseDialog.ui  Dialog.cpp  Dialog.h  ErrorDialog.cpp  ErrorDialog.h  ExportDialog.cpp  ExportDialog.h  ExportDialog.ui  FilterDialog.cpp  FilterDialog.h  FilterDialog.ui  FirstRunDialog.cpp  FirstRunDialog.h  FirstRunDialog.ui  ImportExternalDialog.cpp  ImportExternalDialog.h  ImportExternalDialog.ui  ImportLocalDialog.cpp  ImportLocalDialog.h  ImportLocalDialog.ui  ImportOtherUserDialog.cpp  ImportOtherUserDialog.h  ImportOtherUserDialog.ui  ImportSelectorDialog.cpp  ImportSelectorDialog.h  ImportSelectorDialog.ui  (+19 more)
src/imtest/: Image.cpp  Image.h  ImageConverters.h  ImageSpaceConverters.cpp  ImageSpaceConverters.h  groundtruth.m  oldtest.cpp  test.cpp  test.pro  tst.m
src/test/: Image.cpp  Image.h  ImageConverters.cpp  ImageSpaceConverters.cpp  ImageSpaceConverters.h  test.pro
src/ui/: Action.cpp  Action.h  ActionBar.cpp  ActionBar.h  AddRootDialog.cpp  AddRootDialog.h  AddRootDialog.ui  AllControls.cpp  AllControls.h  Application.cpp  Application.h  AppliedTagEditor.cpp  (+131 more)
test/: tagpractice.py  tagpractice1.py  test.pri  threadtest.cpp  threadtest.pro
tools/: applyfiledate.py  applyforeigntags.pl  collectforeigntags.pl  examples.sql  fixorient.pl  fmountlens.p.txt  icons2docs.sh  importcolorlabels.pl  importxmp.pl  nikonlenses2c.pl  purgecache.py  splitdb.py
(+9 files in other folders)
